Create base documents

--- a/app.json
+++ b/app.json
@@ -10,14 +10,27 @@
   "help": "",
   "url": "",
   "logo": "",
-  "dependencies": [],
+  "dependencies": [
+    {
+    "id": "0ff3c0f3-ee4e-43ef-bcef-3c9d5099d180",
+    "name": "UN_Number",
+    "publisher": "DHLab",
+    "version": "1.0.0.0"     
+    },
+    {
+    "id": "65359388-1596-40f5-91c1-38c6a4a134bd",
+    "name": "Consol PO Req",
+    "publisher": "DHLab",
+    "version": "1.0.0.0"
+    }
+],
   "screenshots": [],
   "platform": "1.0.0.0",
   "application": "18.0.0.0",
   "idRanges": [
     {
       "from": 50180,
-      "to": 50189
+      "to": 50199
     }
   ],
   "resourceExposurePolicy": {
